# SPLASHD

./: .gitignore  README.md  environment.yml  pyproject.toml
src/splashd/: __init__.py  analyze_solvent_size.py  cage.py  construct.py  plot.py  predict.py  simulate.py  solvent.py
workflows/novel-systems/: 1_initialize_cages.py  2_analyze_cage_windows.py  3_initialize_solvents.py  4_run_SP_xtb_solvent_calculations.py  5_calculate_waa_solvent_steric_parameters.py  6_predict_size_exclusivity.py  7_plot_mean_size_vs_kde_overlap.py
workflows/validation-systems/: 1_initialize_cages.py  3_initialize_solvents.py  4_run_SP_xtb_solvent_calculations.py  5_calculate_waa_solvent_steric_parameters.py  6_predict_size_exclusivity.py  7_plot_mean_size_vs_kde_overlap.py
